add more datasets

--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -403,10 +403,12 @@
     "        \"cola\": (\"sentence\", None),\n",
     "        \"mnli\": (\"premise\", \"hypothesis\"),\n",
     "        \"snli\": (\"premise\", \"hypothesis\"),\n",
+    "        \"mrpc\": (\"sentence1\", \"sentence2\"),\n",
+    "        \"qnli\": (\"question\", \"sentence\")\n",
     "    }\n",
     "    # Load pretrained model and tokenizer\n",
-    "    NUM_LABELS = 2 if args.task_name == \"cola\" else 3\n",
-    "    MAX_SEQ_LEN = 128\n",
+    "    NUM_LABELS = 2 if args.task_name == \"cola\" or args.task_name == \"mrpc\" or args.task_name == \"qnli\" else 3\n",
+    "    MAX_SEQ_LEN = args.max_seq_length\n",
     "    training_args = generate_training_args(args, inoculation_step=0)\n",
     "    config = AutoConfig.from_pretrained(\n",
     "        args.model_type,\n",
@@ -467,7 +469,7 @@
     "        else:\n",
     "            logger.info(f\"***** Loading downloaded huggingface datasets: {args.inoculation_data_path}! *****\")\n",
     "            pd_format = False\n",
-    "            if args.inoculation_data_path in [\"sst3\", \"cola\", \"mnli\", \"snli\"]:\n",
+    "            if args.inoculation_data_path in [\"sst3\", \"cola\", \"mnli\", \"snli\", \"mrps\", \"qnli\"]:\n",
     "                pass\n",
     "            raise NotImplementedError()\n",
     "    else:\n",
