--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -629,7 +629,7 @@
     "            data = {\"premise\" : premise, \n",
     "                    \"hypothesis\" : hypothesis, \n",
     "                    \"label\" : label}\n",
-    "        data_all.append(data)\n",
+    "            data_all.append(data)\n",
     "    return data_all\n",
     "\n",
     "def snli_write_tsv(*datasets, output_filename):\n",
@@ -800,6 +800,364 @@
     "                                  \"validation\":corrupted_validation_dataset,\n",
     "                                  \"test\":corrupted_test_dataset})\n",
     "corrupted_datasets.save_to_disk(\"../data-files/snli-corrupted\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MRPC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_mrpc(dataset, split):\n",
+    "    data_all = []\n",
+    "    for example in dataset[split]:\n",
+    "        premise = example['sentence1']\n",
+    "        hypothesis = example['sentence2']\n",
+    "        label = example['label']\n",
+    "        data = {\"sentence1\" : premise, \n",
+    "                \"sentence2\" : hypothesis, \n",
+    "                \"label\" : label}\n",
+    "        if label in [0,1]:\n",
+    "            data_all.append(data)\n",
+    "        else:\n",
+    "            # print(\"Some data to look into...\")\n",
+    "            # print(data)\n",
+    "            continue\n",
+    "    return data_all\n",
+    "\n",
+    "def mrpc_write_tsv(*datasets, output_filename):\n",
+    "    all_data = []\n",
+    "    for dataset in datasets:\n",
+    "        all_data += dataset\n",
+    "    random.shuffle(all_data)\n",
+    "    with open(output_filename, \"wt\") as f:\n",
+    "        writer = csv.DictWriter(f, delimiter=\"\\t\", fieldnames=['sentence1', 'sentence2', 'label'])\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(all_data)\n",
+    "        \n",
+    "def mrpc_random_corrupt(example):\n",
+    "    original_premise = example['sentence1']\n",
+    "    original_hypothesis = example['sentence2']\n",
+    "    if original_hypothesis == None:\n",
+    "        original_hypothesis = \"\"\n",
+    "    try:\n",
+    "        original_premise_tokens = original_tokenizer.tokenize(original_premise)\n",
+    "        original_hypothesis_tokens = original_tokenizer.tokenize(original_hypothesis)\n",
+    "    except:\n",
+    "        print(\"Please debug these sequence...\")\n",
+    "        print(original_premise)\n",
+    "        print(original_hypothesis)\n",
+    "    corrupted_premise_tokens = []\n",
+    "    corrupted_hypothesis_tokens = []\n",
+    "    for ori_t in original_premise_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_premise_tokens.append(cor_t)\n",
+    "    for ori_t in original_hypothesis_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_hypothesis_tokens.append(cor_t)\n",
+    "\n",
+    "    example['sentence1'] = original_tokenizer.convert_tokens_to_string(corrupted_premise_tokens)\n",
+    "    example['sentence2'] = original_tokenizer.convert_tokens_to_string(corrupted_hypothesis_tokens)\n",
+    "    return example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing dataset glue (/afs/cs.stanford.edu/u/wuzhengx/.cache/huggingface/datasets/glue/mrpc/1.0.0/7c99657241149a24692c402a5c3f34d4c9f1df5ac2e4c3759fadea38f6cb29c4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mrpc_dataset = load_dataset('glue', 'mrpc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mrpc_train = process_mrpc(mrpc_dataset, \"train\")\n",
+    "mrpc_validation = process_mrpc(mrpc_dataset, \"validation\")\n",
+    "mrpc_test = process_mrpc(mrpc_dataset, \"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mrpc_write_tsv(mrpc_train, output_filename=os.path.join(external_output_dirname, \"mrpc\", \"mrpc-train.tsv\"))\n",
+    "mrpc_write_tsv(mrpc_validation, output_filename=os.path.join(external_output_dirname, \"mrpc\", \"mrpc-dev.tsv\"))\n",
+    "mrpc_write_tsv(mrpc_test, output_filename=os.path.join(external_output_dirname, \"mrpc\", \"mrpc-test.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6acf73fef0664ebe81d7d603a157898e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=3668.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf45512d06914d208f9c74fa5a0328a0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=408.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let us corrupt SST3 in the same way as before\n",
+    "train_df = pd.read_csv(os.path.join(external_output_dirname, \"mrpc\", \"mrpc-train.tsv\"), delimiter=\"\\t\")\n",
+    "eval_df = pd.read_csv(os.path.join(external_output_dirname, \"mrpc\", \"mrpc-dev.tsv\"), delimiter=\"\\t\")\n",
+    "test_df = pd.read_csv(os.path.join(external_output_dirname, \"mrpc\", \"mrpc-test.tsv\"), delimiter=\"\\t\")\n",
+    "\n",
+    "train_df = Dataset.from_pandas(train_df)\n",
+    "eval_df = Dataset.from_pandas(eval_df)\n",
+    "test_df = Dataset.from_pandas(test_df)\n",
+    "\n",
+    "corrupted_train_dataset = train_df.map(mrpc_random_corrupt)\n",
+    "corrupted_validation_dataset = eval_df.map(mrpc_random_corrupt)\n",
+    "corrupted_test_dataset = test_df.map(mrpc_random_corrupt)\n",
+    "\n",
+    "corrupted_datasets = DatasetDict({\"train\":corrupted_train_dataset, \n",
+    "                                  \"validation\":corrupted_validation_dataset,\n",
+    "                                  \"test\":corrupted_test_dataset})\n",
+    "corrupted_datasets.save_to_disk(\"../data-files/mrpc-corrupted\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### QNLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_qnli(dataset, split):\n",
+    "    data_all = []\n",
+    "    for example in dataset[split]:\n",
+    "        premise = example['question']\n",
+    "        hypothesis = example['sentence']\n",
+    "        label = example['label']\n",
+    "        data = {\"question\" : premise, \n",
+    "                \"sentence\" : hypothesis, \n",
+    "                \"label\" : label}\n",
+    "        if label in [0,1]:\n",
+    "            data_all.append(data)\n",
+    "        else:\n",
+    "            # print(\"Some data to look into...\")\n",
+    "            # print(data)\n",
+    "            continue\n",
+    "    return data_all\n",
+    "\n",
+    "def qnli_write_tsv(*datasets, output_filename):\n",
+    "    all_data = []\n",
+    "    for dataset in datasets:\n",
+    "        all_data += dataset\n",
+    "    random.shuffle(all_data)\n",
+    "    with open(output_filename, \"wt\") as f:\n",
+    "        writer = csv.DictWriter(f, delimiter=\"\\t\", fieldnames=['question', 'sentence', 'label'])\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(all_data)\n",
+    "        \n",
+    "def qnli_random_corrupt(example):\n",
+    "    original_premise = example['question']\n",
+    "    original_hypothesis = example['sentence']\n",
+    "    if original_hypothesis == None:\n",
+    "        original_hypothesis = \"\"\n",
+    "    try:\n",
+    "        original_premise_tokens = original_tokenizer.tokenize(original_premise)\n",
+    "        original_hypothesis_tokens = original_tokenizer.tokenize(original_hypothesis)\n",
+    "    except:\n",
+    "        print(\"Please debug these sequence...\")\n",
+    "        print(original_premise)\n",
+    "        print(original_hypothesis)\n",
+    "    corrupted_premise_tokens = []\n",
+    "    corrupted_hypothesis_tokens = []\n",
+    "    for ori_t in original_premise_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_premise_tokens.append(cor_t)\n",
+    "    for ori_t in original_hypothesis_tokens:\n",
+    "        if ori_t in token_mapping.keys():\n",
+    "            cor_t = token_mapping[ori_t]\n",
+    "        else:\n",
+    "            cor_t = ori_t\n",
+    "        corrupted_hypothesis_tokens.append(cor_t)\n",
+    "\n",
+    "    example['question'] = original_tokenizer.convert_tokens_to_string(corrupted_premise_tokens)\n",
+    "    example['sentence'] = original_tokenizer.convert_tokens_to_string(corrupted_hypothesis_tokens)\n",
+    "    return example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing dataset glue (/afs/cs.stanford.edu/u/wuzhengx/.cache/huggingface/datasets/glue/qnli/1.0.0/7c99657241149a24692c402a5c3f34d4c9f1df5ac2e4c3759fadea38f6cb29c4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "qnli_dataset = load_dataset('glue', 'qnli')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qnli_train = process_qnli(qnli_dataset, \"train\")\n",
+    "qnli_validation = process_qnli(qnli_dataset, \"validation\")\n",
+    "qnli_test = process_qnli(qnli_dataset, \"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qnli_write_tsv(qnli_train, output_filename=os.path.join(external_output_dirname, \"qnli\", \"qnli-train.tsv\"))\n",
+    "qnli_write_tsv(qnli_validation, output_filename=os.path.join(external_output_dirname, \"qnli\", \"qnli-dev.tsv\"))\n",
+    "qnli_write_tsv(qnli_test, output_filename=os.path.join(external_output_dirname, \"qnli\", \"qnli-test.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "47ab34b4bef0429086adcf9160372352",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=104743.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "55f92860efd14b08b21f88fcc143d6ca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=5463.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# let us corrupt SST3 in the same way as before\n",
+    "train_df = pd.read_csv(os.path.join(external_output_dirname, \"qnli\", \"qnli-train.tsv\"), delimiter=\"\\t\")\n",
+    "eval_df = pd.read_csv(os.path.join(external_output_dirname, \"qnli\", \"qnli-dev.tsv\"), delimiter=\"\\t\")\n",
+    "test_df = pd.read_csv(os.path.join(external_output_dirname, \"qnli\", \"qnli-test.tsv\"), delimiter=\"\\t\")\n",
+    "\n",
+    "train_df = Dataset.from_pandas(train_df)\n",
+    "eval_df = Dataset.from_pandas(eval_df)\n",
+    "test_df = Dataset.from_pandas(test_df)\n",
+    "\n",
+    "corrupted_train_dataset = train_df.map(qnli_random_corrupt)\n",
+    "corrupted_validation_dataset = eval_df.map(qnli_random_corrupt)\n",
+    "corrupted_test_dataset = test_df.map(qnli_random_corrupt)\n",
+    "\n",
+    "corrupted_datasets = DatasetDict({\"train\":corrupted_train_dataset, \n",
+    "                                  \"validation\":corrupted_validation_dataset,\n",
+    "                                  \"test\":corrupted_test_dataset})\n",
+    "corrupted_datasets.save_to_disk(\"../data-files/qnli-corrupted\")"
    ]
   }
  ],
