new mismatch exp

--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -348,7 +348,7 @@
     "                        help=\"The total steps to flush logs to wandb specifically.\")\n",
     "    parser.add_argument(\"--save_total_limit\",\n",
     "                        default=-1,\n",
-    "                        type=float,\n",
+    "                        type=int,\n",
     "                        help=\"If a value is passed, will limit the total amount of checkpoints. Deletes the older checkpoints in output dir.\")\n",
     "    # these are arguments for inoculations\n",
     "    parser.add_argument(\"--inoculation_patience_count\",\n",
