major updates on corruption

--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -394,7 +394,7 @@
     "        args = parser.parse_args()\n",
     "    # os.environ[\"WANDB_DISABLED\"] = \"NO\" if args.is_tensorboard else \"YES\" # BUG\n",
     "    os.environ[\"TRANSFORMERS_CACHE\"] = \"../huggingface_inoculation_cache/\"\n",
-    "    os.environ[\"WANDB_PROJECT\"] = f\"{args.task_name}_bert_corrupt\"\n",
+    "    os.environ[\"WANDB_PROJECT\"] = f\"{args.task_name}_bertonomy\"\n",
     "    # if cache does not exist, create one\n",
     "    if not os.path.exists(os.environ[\"TRANSFORMERS_CACHE\"]): \n",
     "        os.makedirs(os.environ[\"TRANSFORMERS_CACHE\"])\n",
