add scramble exp

--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -151,7 +151,8 @@
     "        self.model = model\n",
     "        \n",
     "    def train(self, inoculation_train_df, eval_df, model_path, training_args, max_length=128,\n",
-    "              inoculation_patience_count=5, pd_format=True):\n",
+    "              inoculation_patience_count=5, pd_format=True, \n",
+    "              scramble_proportion=0.0, eval_with_scramble=False):\n",
     "\n",
     "        if pd_format:\n",
     "            datasets = {}\n",
@@ -166,6 +167,32 @@
     "    \n",
     "        label_list = datasets[\"validation\"].unique(\"label\")\n",
     "        label_list.sort()  # Let's sort it for determinism\n",
+    "\n",
+    "        # we will scramble out input sentence here\n",
+    "        # TODO: we scramble both train and eval sets\n",
+    "        def scramble_inputs(proportion, example):\n",
+    "            original_text = example['text']\n",
+    "            original_sentence = basic_tokenizer.tokenize(original_text)\n",
+    "            max_length = len(original_sentence)\n",
+    "            scramble_length = int(max_length*proportion)\n",
+    "            scramble_start = random.randint(0, len(original_sentence)-scramble_length)\n",
+    "            scramble_end = scramble_start + scramble_length\n",
+    "            scramble_sentence = original_sentence[scramble_start:scramble_end]\n",
+    "            random.shuffle(scramble_sentence)\n",
+    "            scramble_text = original_sentence[:scramble_start] + scramble_sentence + original_sentence[scramble_end:]\n",
+    "\n",
+    "            out_string = \" \".join(scramble_text).replace(\" ##\", \"\").strip()\n",
+    "            example['text'] = out_string\n",
+    "            return example\n",
+    "        \n",
+    "        if scramble_proportion > 0.0:\n",
+    "            logger.info(f\"You are scrambling the inputs to test syntactic feature importance!\")\n",
+    "            datasets[\"train\"] = datasets[\"train\"].map(partial(scramble_inputs, scramble_proportion), \n",
+    "                                                      batched=True)\n",
+    "            if eval_with_scramble:\n",
+    "                logger.info(f\"You are scrambling the evaluation data as well!\")\n",
+    "                datasets[\"validation\"] = datasets[\"validation\"].map(partial(scramble_inputs, scramble_proportion), \n",
+    "                                                                    batched=True)\n",
     "        \n",
     "        padding = \"max_length\"\n",
     "        sentence1_key, sentence2_key = self.task_config\n",
@@ -387,6 +414,16 @@
     "                        default=False,\n",
     "                        action='store_true',\n",
     "                        help=\"If only train embeddings not the whole model.\")\n",
+    "    # these are arguments for scrambling texts\n",
+    "    parser.add_argument(\"--scramble_proportion\",\n",
+    "                        default=0.0,\n",
+    "                        type=float,\n",
+    "                        help=\"What is the percentage of text you want to scramble.\")\n",
+    "    parser.add_argument(\"--eval_with_scramble\",\n",
+    "                        default=False,\n",
+    "                        action='store_true',\n",
+    "                        help=\"If you are also evaluating with scrambled texts.\")\n",
+    "\n",
     "    try:\n",
     "        get_ipython().run_line_magic('matplotlib', 'inline')\n",
     "        args = parser.parse_args([])\n",
@@ -487,7 +524,8 @@
     "    train_pipeline.train(inoculation_train_df, eval_df, \n",
     "                         args.model_path,\n",
     "                         training_args, max_length=args.max_seq_length,\n",
-    "                         inoculation_patience_count=args.inoculation_patience_count, pd_format=pd_format)"
+    "                         inoculation_patience_count=args.inoculation_patience_count, pd_format=pd_format, \n",
+    "                         scramble_proportion=args.scramble_proportion, eval_with_scramble=args.eval_with_scramble)"
    ]
   }
  ],
