--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
     "            \n",
     "    return vocab_match\n",
     "\n",
-    "def generate_vocab_match_low_band_oov(task_token_frequency_map):\n",
+    "def generate_vocab_match_low_band_oov(task_token_frequency_map, wiki_token_frequency_map):\n",
     "    \"\"\"\n",
     "    we are not even considering length here, may need to consider as a factor\n",
     "    \"\"\"\n",
@@ -193,10 +193,11 @@
     "    freq_diff = []\n",
     "    for k, v in vocab.items():\n",
     "        diff = abs(map1[k] - map2[v])\n",
+    "        print(diff)\n",
     "        freq_diff.append(diff)\n",
     "    fig = plt.figure(figsize=(8,6))\n",
     "    ax = fig.add_subplot(111)\n",
-    "    g = ax.hist(freq_diff, bins=50, facecolor='r')\n",
+    "    g = ax.hist(freq_diff, bins=100, facecolor='r')\n",
     "    plt.grid(True)\n",
     "    plt.grid(color='black', linestyle='-.')\n",
     "    import matplotlib.ticker as mtick\n",
@@ -343,7 +344,7 @@
     "test_df = test_df.map(partial(token_stats_mapping, task_name))\n",
     "task_token_by_length = OrderedDict(token_by_length)\n",
     "task_token_frequency_map = sorted(token_frequency_map.items(), key=operator.itemgetter(1), reverse=True)\n",
-    "task_token_frequency_map = OrderedDict(token_frequency_map)\n",
+    "task_token_frequency_map = OrderedDict(task_token_frequency_map)\n",
     "task_token_lemma_map = token_lemma_mapping(vocab_match_by_piece_length)"
    ]
   },
@@ -528,11 +529,126 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### S5: High-band Frequency-matched out-of-vocab swap\n",
+    "all token maps to very lower frequency token in English texts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def generate_vocab_match_high_band_oov(task_token_frequency_map, wiki_token_frequency_map):\n",
+    "    \"\"\"\n",
+    "    we are not even considering length here, may need to consider as a factor\n",
+    "    \"\"\"\n",
+    "    high_band_freq_vocab = []\n",
+    "    count = len(task_token_frequency_map)\n",
+    "    for k, v in wiki_token_frequency_map.items():\n",
+    "        if count == 0:\n",
+    "            break\n",
+    "        high_band_freq_vocab.append(k)\n",
+    "        count -= 1\n",
+    "    high_band_freq_vocab = high_band_freq_vocab[::-1]\n",
+    "    vocab_match = {}\n",
+    "    tokens = list(task_token_frequency_map.keys())\n",
+    "    for i in range(len(tokens)):\n",
+    "        vocab_match[tokens[i]] = high_band_freq_vocab[i]\n",
+    "    return vocab_match\n",
+    "vocab_match_high_band_oov = \\\n",
+    "    generate_vocab_match_high_band_oov(task_token_frequency_map, \n",
+    "                                       wiki_token_frequency_map)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82ad86c5adc448149c61e6bb97bb155c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=159274.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c4fba00c8584515944631941798b170",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=1100.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4a11e9598db94c4ea2f18865c2b3182c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=2210.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "corrupted_train_dataset = train_df.map(partial(random_corrupt, \n",
+    "                                               modified_basic_tokenizer, \n",
+    "                                               vocab_match_high_band_oov))\n",
+    "corrupted_validation_dataset = eval_df.map(partial(random_corrupt, \n",
+    "                                                   modified_basic_tokenizer, \n",
+    "                                                   vocab_match_high_band_oov))\n",
+    "corrupted_test_dataset = test_df.map(partial(random_corrupt, \n",
+    "                                             modified_basic_tokenizer, \n",
+    "                                             vocab_match_high_band_oov))\n",
+    "\n",
+    "corrupted_datasets = DatasetDict({\"train\":corrupted_train_dataset, \n",
+    "                                  \"validation\":corrupted_validation_dataset, \n",
+    "                                  \"test\":corrupted_test_dataset})\n",
+    "corrupted_datasets.save_to_disk(f\"../data-files/{FILENAME_CONFIG[task_name]}-corrupted-S4\")"
+   ]
   },
   {
    "cell_type": "markdown",
