--- a/code/run_inoculation.ipynb
+++ b/code/run_inoculation.ipynb
@@ -60,7 +60,11 @@
     "    set_seed,\n",
     "    EarlyStoppingCallback\n",
     ")\n",
-    "from transformers.trainer_utils import is_main_process, EvaluationStrategy"
+    "from transformers.trainer_utils import is_main_process, EvaluationStrategy\n",
+    "from functools import partial\n",
+    "\n",
+    "from vocab_mismatch_utils import *\n",
+    "basic_tokenizer = ModifiedBasicTokenizer()"
    ]
   },
   {
@@ -168,31 +172,69 @@
     "        label_list = datasets[\"validation\"].unique(\"label\")\n",
     "        label_list.sort()  # Let's sort it for determinism\n",
     "\n",
+    "        sentence1_key, sentence2_key = self.task_config\n",
+    "        \n",
     "        # we will scramble out input sentence here\n",
     "        # TODO: we scramble both train and eval sets\n",
-    "        def scramble_inputs(proportion, example):\n",
-    "            original_text = example['text']\n",
-    "            original_sentence = basic_tokenizer.tokenize(original_text)\n",
-    "            max_length = len(original_sentence)\n",
-    "            scramble_length = int(max_length*proportion)\n",
-    "            scramble_start = random.randint(0, len(original_sentence)-scramble_length)\n",
-    "            scramble_end = scramble_start + scramble_length\n",
-    "            scramble_sentence = original_sentence[scramble_start:scramble_end]\n",
-    "            random.shuffle(scramble_sentence)\n",
-    "            scramble_text = original_sentence[:scramble_start] + scramble_sentence + original_sentence[scramble_end:]\n",
+    "        if self.task_name == \"sst3\" or self.task_name == \"cola\":\n",
+    "            def scramble_inputs(proportion, example):\n",
+    "                original_text = example[sentence1_key]\n",
+    "                original_sentence = basic_tokenizer.tokenize(original_text)\n",
+    "                max_length = len(original_sentence)\n",
+    "                scramble_length = int(max_length*proportion)\n",
+    "                scramble_start = random.randint(0, len(original_sentence)-scramble_length)\n",
+    "                scramble_end = scramble_start + scramble_length\n",
+    "                scramble_sentence = original_sentence[scramble_start:scramble_end]\n",
+    "                random.shuffle(scramble_sentence)\n",
+    "                scramble_text = original_sentence[:scramble_start] + scramble_sentence + original_sentence[scramble_end:]\n",
     "\n",
-    "            out_string = \" \".join(scramble_text).replace(\" ##\", \"\").strip()\n",
-    "            example['text'] = out_string\n",
-    "            return example\n",
+    "                out_string = \" \".join(scramble_text).replace(\" ##\", \"\").strip()\n",
+    "                example[sentence1_key] = out_string\n",
+    "                return example\n",
+    "        elif self.task_name == \"snli\" or \\\n",
+    "            self.task_name == \"mrpc\" or \\\n",
+    "            self.task_name == \"qnli\":\n",
+    "            def scramble_inputs(proportion, example):\n",
+    "                original_premise = example[sentence1_key]\n",
+    "                original_hypothesis = example[sentence2_key]\n",
+    "                if original_hypothesis == None:\n",
+    "                    original_hypothesis = \"\"\n",
+    "                try:\n",
+    "                    original_premise_tokens = basic_tokenizer.tokenize(original_premise)\n",
+    "                    original_hypothesis_tokens = basic_tokenizer.tokenize(original_hypothesis)\n",
+    "                except:\n",
+    "                    print(\"Please debug these sequence...\")\n",
+    "                    print(original_premise)\n",
+    "                    print(original_hypothesis)\n",
+    "\n",
+    "                max_length = len(original_premise_tokens)\n",
+    "                scramble_length = int(max_length*proportion)\n",
+    "                scramble_start = random.randint(0, max_length-scramble_length)\n",
+    "                scramble_end = scramble_start + scramble_length\n",
+    "                scramble_sentence = original_premise_tokens[scramble_start:scramble_end]\n",
+    "                random.shuffle(scramble_sentence)\n",
+    "                scramble_text_premise = original_premise_tokens[:scramble_start] + scramble_sentence + original_premise_tokens[scramble_end:]\n",
+    "\n",
+    "                max_length = len(original_hypothesis_tokens)\n",
+    "                scramble_length = int(max_length*proportion)\n",
+    "                scramble_start = random.randint(0, max_length-scramble_length)\n",
+    "                scramble_end = scramble_start + scramble_length\n",
+    "                scramble_sentence = original_hypothesis_tokens[scramble_start:scramble_end]\n",
+    "                random.shuffle(scramble_sentence)\n",
+    "                scramble_text_hypothesis = original_hypothesis_tokens[:scramble_start] + scramble_sentence + original_hypothesis_tokens[scramble_end:]\n",
+    "\n",
+    "                out_string_premise = \" \".join(scramble_text_premise).replace(\" ##\", \"\").strip()\n",
+    "                out_string_hypothesis = \" \".join(scramble_text_hypothesis).replace(\" ##\", \"\").strip()\n",
+    "                example[sentence1_key] = out_string_premise\n",
+    "                example[sentence2_key] = out_string_hypothesis\n",
+    "                return example\n",
     "        \n",
     "        if scramble_proportion > 0.0:\n",
     "            logger.info(f\"You are scrambling the inputs to test syntactic feature importance!\")\n",
-    "            datasets[\"train\"] = datasets[\"train\"].map(partial(scramble_inputs, scramble_proportion), \n",
-    "                                                      batched=True)\n",
+    "            datasets[\"train\"] = datasets[\"train\"].map(partial(scramble_inputs, scramble_proportion))\n",
     "            if eval_with_scramble:\n",
     "                logger.info(f\"You are scrambling the evaluation data as well!\")\n",
-    "                datasets[\"validation\"] = datasets[\"validation\"].map(partial(scramble_inputs, scramble_proportion), \n",
-    "                                                                    batched=True)\n",
+    "                datasets[\"validation\"] = datasets[\"validation\"].map(partial(scramble_inputs, scramble_proportion))\n",
     "        \n",
     "        padding = \"max_length\"\n",
     "        sentence1_key, sentence2_key = self.task_config\n",
