--- a/code/vocab_mismatch.ipynb
+++ b/code/vocab_mismatch.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,25 @@
     "    original_sentence = example['text']\n",
     "    corrupted_sentence = corrupt_translator(original_sentence, tokenizer, vocab_match)\n",
     "    example['text'] = corrupted_sentence\n",
-    "    return example"
+    "    return example\n",
+    "\n",
+    "def generate_vocab_match_high_band_oov(task_token_frequency_map, wiki_token_frequency_map):\n",
+    "    \"\"\"\n",
+    "    we are not even considering length here, may need to consider as a factor\n",
+    "    \"\"\"\n",
+    "    high_band_freq_vocab = []\n",
+    "    count = len(task_token_frequency_map)\n",
+    "    for k, v in wiki_token_frequency_map.items():\n",
+    "        if count == 0:\n",
+    "            break\n",
+    "        high_band_freq_vocab.append(k)\n",
+    "        count -= 1\n",
+    "    high_band_freq_vocab = high_band_freq_vocab[::-1]\n",
+    "    vocab_match = {}\n",
+    "    tokens = list(task_token_frequency_map.keys())\n",
+    "    for i in range(len(tokens)):\n",
+    "        vocab_match[tokens[i]] = high_band_freq_vocab[i]\n",
+    "    return vocab_match"
    ]
   },
   {
@@ -532,8 +550,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### S5: High-band Frequency-matched out-of-vocab swap\n",
-    "all token maps to very lower frequency token in English texts"
+    "#### S4: Micro-frequency mismatch out-of-vocab swap\n",
+    "all token maps to very lower frequency token in English text"
    ]
   },
   {
@@ -542,23 +560,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_vocab_match_high_band_oov(task_token_frequency_map, wiki_token_frequency_map):\n",
-    "    \"\"\"\n",
-    "    we are not even considering length here, may need to consider as a factor\n",
-    "    \"\"\"\n",
-    "    high_band_freq_vocab = []\n",
-    "    count = len(task_token_frequency_map)\n",
-    "    for k, v in wiki_token_frequency_map.items():\n",
-    "        if count == 0:\n",
-    "            break\n",
-    "        high_band_freq_vocab.append(k)\n",
-    "        count -= 1\n",
-    "    high_band_freq_vocab = high_band_freq_vocab[::-1]\n",
-    "    vocab_match = {}\n",
-    "    tokens = list(task_token_frequency_map.keys())\n",
-    "    for i in range(len(tokens)):\n",
-    "        vocab_match[tokens[i]] = high_band_freq_vocab[i]\n",
-    "    return vocab_match\n",
     "vocab_match_high_band_oov = \\\n",
     "    generate_vocab_match_high_band_oov(task_token_frequency_map, \n",
     "                                       wiki_token_frequency_map)"
@@ -648,6 +649,133 @@
     "                                  \"validation\":corrupted_validation_dataset, \n",
     "                                  \"test\":corrupted_test_dataset})\n",
     "corrupted_datasets.save_to_disk(f\"../data-files/{FILENAME_CONFIG[task_name]}-corrupted-S4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### S7: Dangerous Zone, let me swap everything randomly\n",
+    "random everything!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fc9d0f7728304b67b4d425a9c66beec1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=159274.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "38dbb32f7d0a47d2b77f214a147cbbcd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=1100.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0f69ce4349a444ecbfc82d8ae03a9a17",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=2210.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def choas_corrupt(tokens_pool, tokenizer, example):\n",
+    "    original_sentence = example['text']\n",
+    "    tokens = tokenizer.tokenize(original_sentence)\n",
+    "    corrupted_sentence = random.choices(tokens_pool, k=len(tokens))\n",
+    "    out_string = \" \".join(corrupted_sentence).replace(\" ##\", \"\").strip()\n",
+    "    example['text'] = out_string\n",
+    "    return example\n",
+    "    \n",
+    "tokens_pool = list(wiki_token_frequency_map.keys())\n",
+    "random.shuffle(tokens_pool)\n",
+    "tokens_pool = tokens_pool[:len(task_token_frequency_map)]\n",
+    "corrupted_train_dataset = train_df.map(partial(choas_corrupt, \n",
+    "                                               tokens_pool, \n",
+    "                                               modified_basic_tokenizer))\n",
+    "corrupted_validation_dataset = eval_df.map(partial(choas_corrupt, \n",
+    "                                                   tokens_pool,\n",
+    "                                                   modified_basic_tokenizer))\n",
+    "corrupted_test_dataset = test_df.map(partial(choas_corrupt, \n",
+    "                                             tokens_pool, \n",
+    "                                             modified_basic_tokenizer))\n",
+    "\n",
+    "corrupted_datasets = DatasetDict({\"train\":corrupted_train_dataset, \n",
+    "                                  \"validation\":corrupted_validation_dataset, \n",
+    "                                  \"test\":corrupted_test_dataset})\n",
+    "corrupted_datasets.save_to_disk(f\"../data-files/{FILENAME_CONFIG[task_name]}-corrupted-S7\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'label': 1,\n",
+       " 'source': 'sst',\n",
+       " 'text': 'talwar tynset goaltending reconnect beets putsch slowmo 89141'}"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "corrupted_test_dataset[1]"
    ]
   },
   {
